src/styles/global.scss
@import "styles/mixins.scss";
@import "styles/variablesscss.scss";

html,
body,
#root {
  height: 100%;
}

body,
input,
textarea,
button {
  margin: 0;
  font-family: "Roboto", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: var(--primary-color);
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

.funnel-page {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  padding: 80px 140px;

  @include mobile-media {
    padding: 40px 0;
  }
}

h1 {
  font-size: var(--font-size-title);
  font-weight: var(--font-weight-medium);
  color: var(--primary-color);
  margin: 0;
}

h2 {
  font-size: var(--font-size-xxl);
  font-weight: var(--font-weight-medium);
  color: var(--primary-color);
  margin: 0;
}

h3 {
  font-size: var(--font-size-xl);
  font-weight: var(--font-weight-medium);
  color: var(--primary-color);
  margin: 0;

  @include mobile-media {
    font-size: var(--font-size-md);
  }
}

h4 {
  font-size: var(--font-size-lg);
  font-weight: var(--font-weight-medium);
  color: var(--primary-color);
  margin: 0;
}

.font-size-title {
  font-size: var(--font-size-title);
}

.font-size-xxl {
  font-size: var(--font-size-xxl);
}

.font-size-xl {
  font-size: var(--font-size-xl);
}

.font-size-lg {
  font-size: var(--font-size-lg);
}

.font-size-md {
  font-size: var(--font-size-md);
}

.font-size-sm {
  font-size: var(--font-size-sm);
}

.font-size-xs {
  font-size: var(--font-size-xs);
}

.text-color-xlight {
  color: var(--text-color-xlight);
}

.text-color-light {
  color: var(--text-color-light);
}

.text-color-normal {
  color: var(--text-color-normal);
}

.font-weight-light {
  font-weight: var(--font-weight-light);
}

.font-weight-normal {
  font-weight: var(--font-weight-normal);
}

.font-weight-medium {
  font-weight: var(--font-weight-medium);
}

.font-weight-bold {
  font-weight: var(--font-weight-bold);
}

.button {
  display: flex;
  justify-content: center;
  align-items: center;
  height: var(--button-medium-height);
  border-radius: var(--button-medium-radius);
  background-color: var(--button-background-color);
  border: 1px solid var(--button-border-color);
  color: var(--button-color);
  font-size: var(--button-medium-font-size);
  font-weight: var(--button-font-weight);
  padding: 0 80px;
  position: relative;
  outline: none;
  cursor: pointer;
  text-decoration: none;
  transition: background-color 0.05s linear, border-color 0.05s linear;
  user-select: none;
  @include mobile-media {
    width: 100%;
  }

  &.collection {
    width: auto;
    padding: 10px 20px;
    background-color: transparent;
    border: 1px solid rgba(1, 1, 1, 0.6);
    color: var(--button-collection-color);
    @include mobile-media {
      padding: 15px 45px;
      height: 100%;
      border-radius: 30px;
    }

    &.mode {
      width: 90px;
      border: none;
      color: #615c58;

      &:hover {
        color: white;
      }
    }

    &.grey {
      background-color: var(--button-collection-background-color);
      box-shadow: inset 0 -1px 0 0 rgba(1, 1, 1, 0.1);
      border: none;
    }

    &.active {
      background-color: black;
      color: white;
      font-size: 14px;
      transition: font-size 0.5s;
      z-index: 99;
    }
  }

  &.large {
    height: var(--button-large-height);
    border-radius: var(--button-large-radius);
    font-size: var(--button-large-font-size);
    padding: 0 45px;

    @include mobile-media {
      height: var(--button-large-height-mobile);
      border-radius: var(--button-large-radius-mobile);
      font-size: var(--button-large-font-size-mobile);
    }
  }

  &:hover {
    background-color: lightness(
      --primary-color,
      var(--button-hover-background-color-lightness)
    );
  }

  &:active {
    background-color: lightness(
      --primary-color,
      var(--button-active-background-color-lightness)
    );
  }

  &:disabled {
    pointer-events: none;
    background-color: var(--button-disabled-background-color);
    color: var(--button-disabled-color);
  }

  &.hasLoader {
    color: transparent;
  }
}

button {
  border: unset;
  background-color: unset;
  cursor: pointer;
  outline: none;
}

.link-button {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: var(--primary-color);
  font-size: var(--font-size-lg);
  font-weight: var(--font-weight-medium);
  transition: color 0.05s linear;
  cursor: pointer;

  @include mobile-media {
    font-size: var(--font-size-md);
  }

  &:hover {
    color: lightness(--primary-color, var(--text-button-hover-color-lightness));
  }

  i {
    font-size: 17px; // For FontAwesome icons, the font-size is sort-of equivalent to their height
    margin-right: 12px;
  }
}

.row {
  display: flex;
  flex-flow: row;

  &.center-vertically {
    align-items: center;
  }

  &.bottom-vertically {
    align-items: baseline;
  }

  &.center-horizontally {
    justify-content: center;
  }

  &.full-width {
    width: 100%;
  }
}

.clickable {
  cursor: pointer;
}

.big-text {
  font-size: var(--font-size-lg);
  color: var(--primary-color);
  font-weight: var(--font-weight-normal);
  @include mobile-media {
    font-size: var(--font-size-sm);
  }
}

.normal-text {
  font-size: var(--font-size-md);
  color: var(--primary-color);
  font-weight: var(--font-weight-normal);
}

.small-text {
  font-size: var(--font-size-sm);
  color: var(--primary-color);
  font-weight: var(--font-weight-normal);
}

.x-small-text {
  font-size: var(--font-size-xs);
  color: var(--primary-color);
  font-weight: var(--font-weight-normal);
}

.margin-top {
  margin-top: var(--vertical-spacing-normal);
}

.clickable {
  cursor: pointer;
}

.margin-top-half {
  margin-top: var(--vertical-spacing-half);
}

.margin-bottom {
  margin-bottom: var(--vertical-spacing-normal);
}

.margin-bottom-half {
  margin-bottom: var(--vertical-spacing-half);
}

.margin-top-big {
  margin-top: var(--spacing-big);
  @include mobile-media {
    margin-top: $margin-small-5;
  }
}

.horizontal-divider {
  border-top: 1px solid var(--color-separator);
  width: 100%;
  height: 1px;
}

.horizontal-divider-toolbar {
  border-top: 1px solid black;
  opacity: 0.6;
  width: 100%;
  height: 1px;
  margin: 10px 0 $margin-small-4 0;
  @media (max-width: 520px) {
    margin: 15px 0;
    border-top: 1px solid rgba(#363648, 0.1);
  }

  &.extra-margin {
    margin-bottom: 40px;
    @media (max-width: 520px) {
      border-top: 1px solid black;
      margin-bottom: 15px;
    }
  }
}

.horizontal-divider-collections {
  border-top: 1px solid #363648;
  opacity: 0.1;
  width: 100%;
  height: 1px;
  margin: $margin-small-4 0 $margin-medium-5 0;
}

.horizontal-divider-footer {
  border-top: 1px solid white;
  opacity: 0.1;
  width: 100%;
  height: 1px;
  margin: 0 0 $margin-small-4 0;
}

$ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);

.contributors-share {
  height: 40px;
  width: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: var(--font-size-md);
  background-color: rgba(#ccb79e, 0.1);
  border-radius: 100px;
  margin-left: 5px;
  cursor: pointer;

  &:hover {
    box-shadow: inset 2px 2px 5px 0 #e0dfdd, inset -2px -2px 5px 0 #ffffff;
  }
}

@media (max-width: 520px) {
  .commonArea {
    margin-top: $margin-small-4;
  }
}

.twoImg {
  display: grid;
  grid-template-rows: 50% 50%;
  grid-template-columns: 100%;
}
.multipleImg {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: 50% 50%;
}

